<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alarm_update" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
    
    <LinearLayout 
        android:gravity="center_vertical" 
        android:orientation="vertical" 
        android:id="@+id/alarm_bottom_menu" 
        
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true">
        <LinearLayout 
            android:gravity="center_vertical" 
            android:layout_gravity="center_vertical" 
            android:orientation="horizontal" 
            android:id="@+id/alarm_menu_bar" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content">
            <Button 
                android:gravity="bottom|center" 
                android:id="@+id/button1" 
                android:background="@null"
                android:paddingTop="1.0dip" 
                android:paddingBottom="10.0dip" 
                android:layout_width="wrap_content" 
                android:layout_height="fill_parent" 
                android:visibility="invisible" 
                android:layout_weight="1.0" />
            <Button
                android:gravity="bottom|center" 
                android:id="@+id/button2" 
		android:background="@null"
                android:paddingTop="1.0dip" 
                android:paddingBottom="10.0dip" 
                android:layout_width="wrap_content" 
                android:layout_height="fill_parent" 
                android:visibility="invisible" 
                android:layout_weight="1.0" />
            <Button 
                android:gravity="bottom|center" 
                android:id="@+id/button3" 
                android:background="@null"
                android:paddingTop="1.0dip" 
                android:paddingBottom="10.0dip" 
                android:layout_width="wrap_content" 
                android:layout_height="fill_parent" 
                android:visibility="invisible" 
                android:layout_weight="1.0" />
            <Button 
                android:textSize="11.0sp" 
                android:background="@null"
                android:gravity="bottom|center" 
                android:id="@+id/alarm_update_btn" 
                android:text="@string/app_name"
                android:paddingTop="1.0dip" 
                android:paddingBottom="10.0dip" 
                android:clickable="true" 
                android:layout_width="wrap_content" 
                android:layout_height="fill_parent" 
                android:includeFontPadding="false" 
                android:drawableBottom="@drawable/selector_text_alarm_update_btn" 
                android:drawablePadding="-5.0dip" 
                android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout 
	        android:id="@+id/alarm_btns"
	        android:orientation="horizontal"
	        android:layout_width="330dip"
	        android:layout_height="90dip"
	        android:layout_above="@id/alarm_bottom_menu"
                android:background="@drawable/note_alarm_update_bg"
                android:gravity="center_vertical"
                android:layout_marginLeft="15dip"
                android:paddingTop="10dip"
	        >
       
            <Button
                android:id="@+id/modify_btn"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="0dip"
                android:background="@drawable/alarm_modify_btn_pressed"
                android:text="@string/alarm_modify"
                android:clickable="true"
                android:textColor="#ff000000"
                />
            <ImageView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/button_gap"
		android:layout_marginBottom="1dip"
		 />
            <Button
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dip"
                android:layout_marginRight="13dip"
                android:background="@drawable/alarm_delete_btn_pressed"
                android:text="@string/alarm_delete"
                android:clickable="true"
                android:textColor="#ff000000"
                />   
    </LinearLayout>
  
</RelativeLayout>
